# LVVT-Tutor

./: .env.example  .gitignore  .replit  README.md  main.py  pyproject.toml  replit.md
app/: __init__.py
app/api/: __init__.py  analytics.py  audio.py  auth.py  learning.py  mentor.py  offline.py  pdf_viewer.py  peer_comparison.py  practice_exam.py  quiz.py  spaced_repetition.py  standards.py  teach.py
app/core/: config.py  database.py
app/models/: __init__.py  analytics.py  enhanced.py  quiz.py  user.py
app/services/auth/: jwt.py
app/services/rag/: __init__.py  ai_service.py  pdf_indexer.py  pdf_processor.py  vector_store.py
app/services/scraping/: __init__.py  lvvta_scraper.py
attached_assets/: Pasted--LVV-Certifier-Learning-Testing-App-LVV-Learn-Project-O_1768402367307.txt  Pasted-2026-01-15-14-03-05-73-49ae1a23-User-2026-01-15-01-03-0_1768439343833.txt
static/css/: quiz.css
static/js/: quiz.js
templates/: quiz.html
tests/: conftest.py  test_auth_persistence.py  test_e2e_flow.py  test_pdf_backfill_and_view.py  test_teach.py
